--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -30,7 +30,7 @@
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Programmer</p>
                 <nav>
-                    <a href="http://youtube.com/yashrajluitel"><i class="fab fa-youtube"></i></a>
+                    <a href="https://youtube.com/yashrajluitel"><i class="fab fa-youtube"></i></a>
                     <a href="https://www.facebook.com/Luitelyashraj"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://github.com/YR-luitel"><i class="fab fa-github"></i></a>
                 </nav>
